--- a/PRJ/gomsu-server/src/main/resources/application.properties
+++ b/PRJ/gomsu-server/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=gomsu-server
+server.port=8080
+
+spring.datasource.url=jdbc:mysql://localhost:3306/gomsu
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#java mail
+config.mail.host=smtp.gmail.com
+config.mail.port=587
+config.mail.username=danghongquanvtc111111@gmail.com
+config.mail.password=umcmjvsqytmqlojm
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
