--- a/PRJ/gomsu-server/src/main/resources/application.properties
+++ b/PRJ/gomsu-server/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 spring.application.name=gomsu-server
 server.port=8080
-
+spring.jpa.open-in-view=false
 spring.datasource.url=jdbc:mysql://localhost:3306/gomsu
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 #java mail
 config.mail.host=smtp.gmail.com
 config.mail.port=587
