--- a/PRJ/gomsu-client/package.json
+++ b/PRJ/gomsu-client/package.json
@@ -21,7 +21,9 @@
     "@fortawesome/angular-fontawesome": "^0.15.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "ngx-cookie-service": "^18.0.0",
     "rxjs": "~7.8.0",
     "swiper": "^11.1.14",
     "tslib": "^2.3.0",
