--- a/PRJ/gomsu-client/package.json
+++ b/PRJ/gomsu-client/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^18.2.10",
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
@@ -25,6 +26,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "ngx-cookie-service": "^18.0.0",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "swiper": "^11.1.14",
     "tslib": "^2.3.0",
