--- a/PRJ/gomsu-server/src/main/resources/application.properties
+++ b/PRJ/gomsu-server/src/main/resources/application.properties
@@ -18,10 +18,9 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 # OAuth2 Client Configuration for Google
 spring.security.oauth2.client.registration.google.client-id=690739757623-jmi3qvg52nu1s2oosvad64qqtoaflchk.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
-spring.security.oauth2.client.registration.google.scope=profile,email
-spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/users/public/oauth2/success
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:4200/auth/google/callback
 spring.security.oauth2.client.registration.google.client-name=Google
-spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
-spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+#spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
+#spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
 logging.level.org.springframework.security.oauth2=DEBUG
