--- a/PRJ/gomsu-client/package.json
+++ b/PRJ/gomsu-client/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "ngx-cookie-service": "^18.0.0",
+    "ngx-pagination": "^6.0.3",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "swiper": "^11.1.14",
