--- a/PRJ/ProductService/src/main/resources/application.properties
+++ b/PRJ/ProductService/src/main/resources/application.properties
@@ -3,5 +3,8 @@ server.port=8081
 spring.jpa.open-in-view=false
 spring.datasource.url=jdbc:mysql://localhost:3306/gomsu
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=207205
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=trace
+
