--- a/PRJ/gomsu-server/src/main/resources/application.properties
+++ b/PRJ/gomsu-server/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 spring.jpa.open-in-view=false
 spring.datasource.url=jdbc:mysql://localhost:3306/gomsu
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=207205
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Java Mail Configuration
 config.mail.host=smtp.gmail.com
