--- a/PRJ/ProductService/src/main/resources/application.properties
+++ b/PRJ/ProductService/src/main/resources/application.properties
@@ -7,4 +7,8 @@ spring.datasource.password=207205
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=trace
-
+#eureka
+spring.cloud.discovery.enabled=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
