--- a/PRJ/gomsu-server/src/main/resources/application.properties
+++ b/PRJ/gomsu-server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=gomsu-server
-server.port=8080
+server.port=8082
 spring.jpa.open-in-view=false
 spring.datasource.url=jdbc:mysql://localhost:3306/gomsu
 spring.datasource.username=root
@@ -15,5 +15,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
-
-
+#config eureka
+spring.cloud.discovery.enabled=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
