--- a/PRJ/Gateway/src/main/resources/application.properties
+++ b/PRJ/Gateway/src/main/resources/application.properties
@@ -3,13 +3,29 @@ server.port=8088
 spring.cloud.discovery.enabled=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
+# Enable service discovery locator
 #spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+
+# Route for Gomsu Server using load balancing
 spring.cloud.gateway.routes[0].id=gomsu-server
 spring.cloud.gateway.routes[0].uri=lb://gomsu-server
 spring.cloud.gateway.routes[0].predicates[0]=Path=/users/**
 
+# Route for ProductService using load balancing
 spring.cloud.gateway.routes[1].id=ProductService
 spring.cloud.gateway.routes[1].uri=lb://ProductService
 spring.cloud.gateway.routes[1].predicates[0]=Path=/products/**,/categories/**,/cart/**
 
+# Route for PaymentService using load balancing
+spring.cloud.gateway.routes[2].id=PaymentService
+spring.cloud.gateway.routes[2].uri=lb://PaymentService
+spring.cloud.gateway.routes[2].predicates[0]=Path=/payments/**
+
+# Test route
+spring.cloud.gateway.routes[3].id=testRoute
+spring.cloud.gateway.routes[3].uri=http://httpbin.org:80
+spring.cloud.gateway.routes[3].predicates[0]=Path=/**
+
+logging.level.org.springframework.cloud.gateway=TRACE
+logging.level.org.springframework.web=DEBUG
