--- a/PRJ/OrderService/src/main/resources/application.properties
+++ b/PRJ/OrderService/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-spring.application.name=ProductService
-server.port=8081
+spring.application.name=OrderService
+server.port=8084
 spring.jpa.open-in-view=false
 spring.datasource.url=jdbc:mysql://localhost:3306/gomsu
 spring.datasource.username=root
 spring.datasource.password=207205
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.maximum-pool-size=10
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=trace
 #eureka
@@ -13,3 +14,4 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.prefer-ip-address=true
+
