--- a/PRJ/PaymentService/src/main/resources/application.properties
+++ b/PRJ/PaymentService/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.application.name=ProductService
-server.port=8081
+spring.application.name=PaymentService
+server.port=8083
 spring.jpa.open-in-view=false
 spring.datasource.url=jdbc:mysql://localhost:3306/gomsu
 spring.datasource.username=root
