update fixed 404 err success gateway and another service

--- a/PRJ/Gateway/src/main/resources/application.properties
+++ b/PRJ/Gateway/src/main/resources/application.properties
@@ -4,28 +4,31 @@ spring.cloud.discovery.enabled=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 # Enable service discovery locator
-#spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
-
-# Route for Gomsu Server using load balancing
-spring.cloud.gateway.routes[0].id=gomsu-server
-spring.cloud.gateway.routes[0].uri=lb://gomsu-server
-spring.cloud.gateway.routes[0].predicates[0]=Path=/users/**
-
-# Route for ProductService using load balancing
-spring.cloud.gateway.routes[1].id=ProductService
-spring.cloud.gateway.routes[1].uri=lb://ProductService
-spring.cloud.gateway.routes[1].predicates[0]=Path=/products/**,/categories/**,/cart/**
-
-# Route for PaymentService using load balancing
-spring.cloud.gateway.routes[2].id=PaymentService
-spring.cloud.gateway.routes[2].uri=lb://PaymentService
-spring.cloud.gateway.routes[2].predicates[0]=Path=/payments/**
-
-# Test route
-spring.cloud.gateway.routes[3].id=testRoute
-spring.cloud.gateway.routes[3].uri=http://httpbin.org:80
-spring.cloud.gateway.routes[3].predicates[0]=Path=/**
+#
+## Route for Gomsu Server using load balancing
+#spring.cloud.gateway.routes[0].id=gomsu-server
+#spring.cloud.gateway.routes[0].uri=lb://gomsu-server
+#spring.cloud.gateway.routes[0].predicates[0]=Path=/users/**
+##spring.cloud.gateway.routes[0].filters[0]=RewritePath=/users/(?<path>.*), /${path}
+#
+## Route for ProductService using load balancing
+#spring.cloud.gateway.routes[1].id=product-service
+#spring.cloud.gateway.routes[1].uri=lb://product-service
+#spring.cloud.gateway.routes[1].predicates[0]=Path=/products/**
+#spring.cloud.gateway.routes[1].predicates[1]=Path=/categories/**
+#spring.cloud.gateway.routes[1].predicates[2]=Path=/cart/**
+##spring.cloud.gateway.routes[1].filters[0]=RewritePath=/products/(?<path>.*), /${path}
+##spring.cloud.gateway.routes[1].filters[1]=RewritePath=/categories/(?<path>.*), /${path}
+##spring.cloud.gateway.routes[1].filters[2]=RewritePath=/cart/(?<path>.*), /${path}
+#
+## Route for PaymentService using load balancing
+#spring.cloud.gateway.routes[2].id=PaymentService
+#spring.cloud.gateway.routes[2].uri=lb://PaymentService
+#spring.cloud.gateway.routes[2].predicates[0]=Path=/payments/**
+##spring.cloud.gateway.routes[2].filters[0]=RewritePath=/payments/(?<path>.*), /${path}
+#
 
 logging.level.org.springframework.cloud.gateway=TRACE
 logging.level.org.springframework.web=DEBUG
