--- a/PRJ/ProductService/src/main/resources/application.properties
+++ b/PRJ/ProductService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=ProductService
+spring.application.name=product-service
 server.port=8081
 spring.jpa.open-in-view=false
 spring.datasource.url=jdbc:mysql://localhost:3306/gomsu
@@ -12,4 +12,9 @@ spring.cloud.discovery.enabled=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.instance.prefer-ip-address=true
+#Redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=
+spring.data.redis.database=0
+spring.data.redis.timeout=2000ms
