--- a/PRJ/Gateway/src/main/resources/application.properties
+++ b/PRJ/Gateway/src/main/resources/application.properties
@@ -6,6 +6,7 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 # Enable service discovery locator
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+spring.main.web-application-type=reactive
 #
 ## Route for Gomsu Server using load balancing
 #spring.cloud.gateway.routes[0].id=gomsu-server
@@ -30,5 +31,5 @@ spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 ##spring.cloud.gateway.routes[2].filters[0]=RewritePath=/payments/(?<path>.*), /${path}
 #
 
-logging.level.org.springframework.cloud.gateway=TRACE
-logging.level.org.springframework.web=DEBUG
+#logging.level.org.springframework.cloud.gateway=TRACE
+#logging.level.org.springframework.web=DEBUG
