--- a/PRJ/ProductService/src/main/resources/application.properties
+++ b/PRJ/ProductService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=product-service
+spring.application.name=ProductService
 server.port=8081
 spring.jpa.open-in-view=false
 spring.datasource.url=jdbc:mysql://localhost:3306/gomsu
