--- a/PRJ/UserService/src/main/resources/application.properties
+++ b/PRJ/UserService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=gomsu-server
+spring.application.name=user-service
 server.port=8082
 spring.jpa.open-in-view=false
 spring.datasource.url=jdbc:mysql://localhost:3306/gomsu
