--- a/PRJ/PaymentService/src/main/resources/application.properties
+++ b/PRJ/PaymentService/src/main/resources/application.properties
@@ -13,3 +13,25 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.prefer-ip-address=true
+
+
+DEV_MOMO_ENDPOINT=https://test-payment.momo.vn/v2/gateway/api
+DEV_ACCESS_KEY=mTCKt9W3eU1m39TW
+DEV_PARTNER_CODE=MOMOLRJZ20181206
+DEV_SECRET_KEY=SetA5RDnLHvt51AULf51DyauxUo3kDU6
+
+##Configuration for production environment
+PROD_MOMO_ENDPOINT=https://payment.momo.vn/v2/gateway/api
+PROD_ACCESS_KEY=key
+PROD_PARTNER_CODE=key
+PROD_SECRET_KEY=key
+
+## AIOv2
+CREATE_URL=/create
+QUERY_URL=/query
+REFUND_URL=/refund
+CONFIRM_URL=/confirm
+TOKEN_PAY_URL=/tokenization/pay
+TOKEN_BIND_URL=/tokenization/bind
+TOKEN_INQUIRY_URL=/tokenization/cbQuery
+TOKEN_DELETE_URL=/tokenization/delete
