--- a/PRJ/PaymentService/src/main/resources/application.properties
+++ b/PRJ/PaymentService/src/main/resources/application.properties
@@ -14,3 +14,8 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.prefer-ip-address=true
 
+DEV_MOMO_ENDPOINT=https://test-payment.momo.vn/v2/gateway/api
+DEV_ACCESS_KEY=mTCKt9W3eU1m39TW
+DEV_PARTNER_CODE=MOMOLRJZ20181206
+DEV_SECRET_KEY=SetA5RDnLHvt51AULf51DyauxUo3kDU6
+
