--- a/PRJ/gomsu-client/package.json
+++ b/PRJ/gomsu-client/package.json
@@ -29,6 +29,7 @@
     "ngx-pagination": "^6.0.3",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.14.5",
     "swiper": "^11.1.14",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
