--- a/PRJ/ProductService/src/main/resources/application.properties
+++ b/PRJ/ProductService/src/main/resources/application.properties
@@ -13,6 +13,6 @@ eureka.client.fetch-registry=true
 #Redis
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
-spring.data.redis.password=
+spring.data.redis.password=207205
 spring.data.redis.database=0
 spring.data.redis.timeout=2000ms
