--- a/PRJ/OrderService/src/main/resources/application.properties
+++ b/PRJ/OrderService/src/main/resources/application.properties
@@ -14,16 +14,5 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.prefer-ip-address=true
-#Kafka
-spring.kafka.bootstrap-servers=localhost:9092
-#Producer
-spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.properties."[spring.json.type.mapping]":payment:com.tasc.hongquan.orderservice.models.Payment
-#Consumer
-spring.kafka.consumer.group-id=order-service
-spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.auto-offset-reset=earliest
-
+logging.level.org.apache.kafka=DEBUG
 
