--- a/PRJ/OrderService/src/main/resources/application.properties
+++ b/PRJ/OrderService/src/main/resources/application.properties
@@ -15,4 +15,13 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.prefer-ip-address=true
 logging.level.org.apache.kafka=DEBUG
-
+# Java Mail Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=danghongquanvtc111111@gmail.com
+spring.mail.password=umcmjvsqytmqlojm
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
