--- a/PRJ/PaymentService/src/main/resources/application.properties
+++ b/PRJ/PaymentService/src/main/resources/application.properties
@@ -13,9 +13,18 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.prefer-ip-address=true
-
 DEV_MOMO_ENDPOINT=https://test-payment.momo.vn/v2/gateway/api
 DEV_ACCESS_KEY=mTCKt9W3eU1m39TW
 DEV_PARTNER_CODE=MOMOLRJZ20181206
 DEV_SECRET_KEY=SetA5RDnLHvt51AULf51DyauxUo3kDU6
+# Java Mail Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=danghongquanvtc111111@gmail.com
+spring.mail.password=umcmjvsqytmqlojm
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
 
